--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 
   <body>
     <!-- write the body here -->
+	  <form id="user-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required>
+        <br>
+        <label for="age">Age:</label>
+        <input type="number" id="age" required>
+        <br>
+        <button id="btn" type="submit">Submit</button>
+    </form>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
